--- a/restauration/templates/page_accueil.html
+++ b/restauration/templates/page_accueil.html
@@ -562,11 +562,11 @@
                   >
                     <div class="counter-items text-center">
                       <span
-                        class="count countup text-uppercase"
-                        cup-end="125"
-                      ></span>
+                        class="count  text-uppercase"
+                      
+                      >300</span>
 
-                      <p class="text">Downloads</p>
+                      <p class="text">plats commandés</p>
                     </div>
                   </div>
                   <!-- single counter -->
@@ -583,10 +583,10 @@
                   >
                     <div class="counter-items text-center">
                       <span
-                        class="count countup text-uppercase"
-                        cup-end="87"
-                      ></span>
-                      <p class="text">Active Users</p>
+                        class="count  text-uppercase"
+                      
+                      >37</span>
+                      <p class="text">différentes plats</p>
                     </div>
                   </div>
                   <!-- single counter -->
@@ -603,10 +603,10 @@
                   >
                     <div class="counter-items text-center">
                       <span
-                        class="count countup text-uppercase"
-                        cup-end="59"
-                      ></span>
-                      <p class="text">User Rating</p>
+                        class="count text-uppercase"
+                        
+                      >25</span>
+                      <p class="text">livreurs</p>
                     </div>
                   </div>
                   <!-- single counter -->
@@ -629,7 +629,7 @@
                 </div>
                 <div class="video-icon">
                   <a
-                    href="https://www.youtube.com/watch?v=r44RKWyfcFw"
+                    href="https://www.youtube.com/watch?v=AKF8Xbnedm8"
                     class="video-popup glightbox"
                   >
                     <i class="lni lni-play"> </i>
@@ -764,7 +764,7 @@
                 data-wow-delay="0.8s"
               >
                 <div class="footer-title">
-                  <h4 class="title">Contact Us</h4>
+                  <h4 class="title">Contactez nous</h4>
                 </div>
                 <ul class="contact">
                   <li>+228 99 86 73 13</li>
@@ -788,8 +788,8 @@
               <div class="copyright d-sm-flex justify-content-between">
                 <div class="copyright-content">
                   <p class="text">
-                    Designed and Developed by
-                    <a href="https://togotulawo.com" rel="nofollow">Togotulawo</a>
+                    Designer et Developper par
+                    <a href="https://togotulawo.com" rel="nofollow"> chicinventory </a>
                   </p>
                 </div>
                 <!-- copyright content -->
