--- a/restauration/templates/page_accueil.html
+++ b/restauration/templates/page_accueil.html
@@ -98,7 +98,7 @@
                       <a href="javascript:void(0)">Equipe</a>
                     </li>
                     <li class="nav-item">
-                      <a href="javascript:void(0)">Blog</a>
+                      <a href="{% url 'liste_article' %}">Blog</a>
                     </li>
                   </ul>
                 </div>
