--- a/restauration/templates/page_accueil.html
+++ b/restauration/templates/page_accueil.html
@@ -666,8 +666,9 @@
             </div>
             <div class="col-lg-6">
               <div class="subscribe-form mt-50">
-                <form action="#">
-                  <input type="text" placeholder="Enter eamil" />
+                <form  method="post" action="{% url 'accueil' %}">
+                  {% csrf_token %}
+                  <input  name ="email" type="text" placeholder="Enter eamil" />
                   <button class="main-btn">Subscribe</button>
                 </form>
               </div>
